--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         id="about"
         class="md:flex justify-between items-center align-middle md:h-[100vh] py-6 md:px-6 mx-auto bg-white dark:bg-slate-500 about">
         <div class="mx-auto px-6 md:px-12 lg:px-20">
-          <img src="./img/aji.jpg" alt="Aji Santoso" class="rounded-xl" />
+          <img src="./img/aji.jpg" alt="Aji Santoso" class="rounded-xl animate-bounce" />
         </div>
         <div class="mx-auto px-6 md:px-12 lg:px-20 mt-5 md:mt-0 about-content">
           <h2 class="text-xl font-bold">Hello, It's Me</h2>
