--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100 poppins-regular">
     <div id="#"></div>
@@ -160,17 +160,17 @@
         </ul>
       </nav>
     </header>
-    <div class="w-screen left-0 py-4 px-[10%]">
+    <div class="w-screen left-0 px-[10%]">
       <!-- About Section -->
       <section
         id="about"
-        class="md:flex justify-between items-center align-middle md:h-[100vh] py-6 md:px-6 mx-auto bg-white dark:bg-slate-900 about">
-        <div class="flex justify-center align-middlemx-auto w-full md:w-1/2 px-6 mt-5 md:mt-0">
+        class="md:flex justify-between items-center align-middle md:h-[90vh] mx-auto bg-white dark:bg-slate-900 about">
+        <div class="flex justify-center align-middlemx-auto w-full md:w-1/2 px-6">
           <div class="z-10 box-foto">
             <img class="z-1" src="./img/aji.jpg" alt="Aji Santoso" />
           </div>
         </div>
-        <div class="mx-auto w-full md:w-1/2 px-6 mt-5 md:mt-0">
+        <div class="mx-auto w-full md:w-1/2 px-6">
           <h2 class="text-xl font-bold doSlideLeft delay-7">Hello, It's Me</h2>
           <h1 id="title" class="text-4xl font-bold fadein2 delay-8">Aji Santoso</h1>
 
